src/test/compile-fail/bad-type-env-capture.rs
// error-pattern: attempted dynamic environment-capture
fn foo[T]() { obj bar(T b) {} }
fn main() {}